# ai-research-assistant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: cache.py  config.py  logger.py  main.py  observability.py
app/api/: routes.py
app/graph/: budget.py  graph.py  state.py
app/graph/nodes/: kb_research.py  orchestrator.py  research.py  synthesis.py  web_research.py  wiki_research.py
app/ingestion/: pipeline.py
app/tools/: dispatcher.py  rag_search.py  registry.py  web_search.py
evals/: golden_set.json
evals/results/: eval_20260627_102337.json
scripts/: ingest.py  run_eval.py  setup.sh
tests/: test_agent.py  test_config.py  test_ingestion.py  test_observability.py
