[project]
name = "ai-research-assistant"
version = "0.1.0"
description = "Multi-agent AI research system using LangGraph, LiteLLM, and Pinecone"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # Agent framework
    "langgraph>=0.2.0",
    "langsmith>=0.1.0",

    # LLM gateway
    "litellm>=1.40.0",

    # Vector DB + reranker
    "pinecone>=5.0.0",
    "cohere>=5.0.0",

    # Embeddings + LLM
    "openai>=1.40.0",

    # Web search
    "httpx>=0.27.0",           # Brave Search API calls

    # API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database (LangGraph checkpoints)
    "asyncpg>=0.29.0",
    "langgraph-checkpoint-postgres>=1.0.0",

    # Cache
    "redis>=5.0.0",

    # Document parsing (ingestion)
    "unstructured[pdf]>=0.14.0",
    "langchain-text-splitters>=0.2.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",       # structured JSON logging
    "tenacity>=8.3.0",         # retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",           # for FastAPI test client
    "ruff>=0.4.0",             # linting + formatting
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
